kubernetes/testing/wikijs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wikijs
  labels:
    app.kubernetes.io/name: wikijs
    app.kubernetes.io/instance: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wikijs
      app.kubernetes.io/instance: wikijs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wikijs
        app.kubernetes.io/instance: wikijs
    spec:
      containers:
        - name: wikijs
          image: ghcr.io/requarks/wiki:2.5.306
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: uploads
              mountPath: /wiki/data
          resources:
            requests:
              cpu: 300m
              memory: 1Gi
            limits:
              cpu: 1500m
              memory: 2Gi
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: wikijs-uploads
