kubernetes/testing/wikijs/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-postgres
  namespace: wikijs
  labels:
    app.kubernetes.io/name: wikijs-postgres
    app.kubernetes.io/instance: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wikijs-postgres
      app.kubernetes.io/instance: wikijs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wikijs-postgres
        app.kubernetes.io/instance: wikijs
    spec:
      containers:
        - name: postgres
          image: postgres:16.13
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wikijs-postgres-data
