kubernetes/testing/wikijs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
  labels:
    app.kubernetes.io/name: wikijs
    app.kubernetes.io/instance: wikijs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wikijs
    app.kubernetes.io/instance: wikijs
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
